--- a/css/style.css
+++ b/css/style.css
@@ -509,7 +509,9 @@ nav {
   background: #fe4844;
   font-size: 18px;
   font-weight: 400;
-  border-radius: 3px; }
+  border-radius: 3px;
+  align-items: center;
+  cursor: pointer;}
   /* line 392, ../sass/style.sass */
   .button-view-all:hover {
     background: #4e4646; }
