--- a/css/style.css
+++ b/css/style.css
@@ -259,7 +259,7 @@ body {
     width: 100%;
   }
   .container {
-    margin: 0;
+    margin: 30px 0 0 0;
   }
   .container__item {
     width: 90%;
