--- a/site4/sass/style.sass
+++ b/site4/sass/style.sass
@@ -294,6 +294,7 @@ input, button
         font-weight: bold
         position: absolute
         top: 17px
+        left: 0
 .interesting__item
     display: flex
     flex-direction: column
