--- a/site4/sass/style.sass
+++ b/site4/sass/style.sass
@@ -650,13 +650,14 @@ input, button
         padding-left: 18px
     .header__search-input
         width: 170px
+    .footer ul li
+        &::before
+            content: none
 @media screen and ( max-width: 362px )
     .footer-nav ul
         display: flex
         flex-direction: column
         li
             padding: 5px 0
-    .footer span
-        display: none
     .search-block__left p
         padding-bottom: 16px
