--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,23 @@ body {
           animation: arrowAni 4s infinite;
 }
 
+.container__item ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.container__item ul li {
+  font-family: 'DellaRespira', Arial, Helvetica, sans-serif;
+  list-style: none;
+  text-decoration: none;
+  color: #fff;
+  position: relative;
+  left: 160px;
+  top: 300px;
+  padding-right: 15px;
+}
+
 .container__item-header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -163,7 +180,7 @@ body {
 }
 
 .container__item-3 {
-  background-image: url("../images/site5.png");
+  background-image: url("../images/site3.png");
   background-size: cover;
   -webkit-animation: animateProjects 10s infinite;
           animation: animateProjects 10s infinite;
@@ -171,13 +188,6 @@ body {
 
 .container__item-4 {
   background-image: url("../images/site4.png");
-  background-size: cover;
-  -webkit-animation: animateProjects 10s infinite;
-          animation: animateProjects 10s infinite;
-}
-
-.container__item-5 {
-  background-image: url("../images/site3.png");
   background-size: cover;
   -webkit-animation: animateProjects 10s infinite;
           animation: animateProjects 10s infinite;
@@ -270,7 +280,11 @@ body {
   }
   .container__item {
     width: 90%;
-    margin: 30px 20px 20px 20px;
+    margin: 30px 20px 40px 20px;
+  }
+  .container__item ul li {
+    left: 0;
+    font-size: 10px;
   }
   .container__item-header {
     -webkit-box-pack: center;
