--- a/test-2/css/style.css
+++ b/test-2/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Bebas';
-  src: url(../fonts/BebasNeue-Regular.ttf);
+  src: url('../fonts/BebasNeue-Regular.ttf');
   font-weight: normal;
 }
 
