--- a/site-coffee/sass/style.sass
+++ b/site-coffee/sass/style.sass
@@ -279,7 +279,10 @@ h3
         border-radius: 50%
         border: 1px solid rgba(138, 81, 55, 1)
         top: -40px
-
+.insta-slider__img
+    transition: .5s ease
+    &:hover
+        opacity: .85
 
 .main__testimonials
     position: relative
@@ -893,6 +896,7 @@ h3
         flex-direction: column
         align-items: center
     .main__how-to-option
+        width: 90%
         padding-bottom: 84px
         &:last-child
             padding-bottom: 0
@@ -939,8 +943,13 @@ h3
         background-position: center -170px
         background-size: 500px 500px
         padding-top: 57px
+    .main__product-description p 
+        padding-right: 20px
+        padding-left: 20px
     .slick-slider__item p
         width: 335px
+    .main__little-about-image img
+        width: 300px
     .main__blog-top
         height: 450px
     .main__blog-top:after
