--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,3 +3,23 @@
 @import "tailwindcss/utilities";
 
 @import "_base.css";
+
+/* FONT "AEONIK" START */
+@font-face {
+    font-family: 'Aeonik';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../../fonts/AeonikTRIAL-Regular.otf') format('opentype');
+}
+@font-face {
+    font-family: 'Aeonik';
+    font-style: normal;
+    font-weight: 200;
+    src: url('../../fonts/AeonikTRIAL-Light.otf') format('opentype');
+}
+@font-face {
+    font-family: 'Aeonik';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../../fonts/AeonikTRIAL-Bold.otf') format('opentype');
+}
